@@ -59,7 +59,7 @@ public class StudentsTableDataModel extends DefaultFlexiTableDataModel<StudentSt
 			try {
 				List<StudentStatEntry> filteredList;
 				if(StringHelper.isLong(searchString)) {
-					Long identityKey = new Long(searchString);
+					Long identityKey = Long.valueOf(searchString);
 					filteredList = backupList.stream()
 						.filter(entry ->  entry.getIdentityKey().equals(identityKey))
 						.collect(Collectors.toList());
@@ -95,7 +95,7 @@ public class StudentsTableDataModel extends DefaultFlexiTableDataModel<StudentSt
 			int countRepo = student.getCountRepo();
 			switch(Columns.getValueAt(col)) {
 				case name: return student.getIdentityName();
-				case countCourse: return new Integer(countRepo);
+				case countCourse: return Integer.valueOf(countRepo);
 				case initialLaunch: {
 					if(countRepo == 0) {
 						return null;
